# aetherlang

./: .aether_build_state.json  Cargo.toml  LICENSE  Makefile  README-aether-file-test.md  README-build-integration.md  README-file-compilation-testing.md  README.md  advanced_test.ae  aether-file-test.toml  build.rs  custom_message.ae  hello_world.ae  test-config.toml  test_examples.ps1  test_simple.ae  validate_file_compilation_testing.rs
Concept Documents/: 1.txt  2.txt  3.txt  4.txt  Aether_ A Unified Design for an AI-Native Programming Language.txt  Aether_ Project and Programming Guide.txt
docs/: mlir-integration.md
examples/: ai_canonical_distributed.ae  ai_canonical_graph_neural.ae  ai_canonical_metaprogramming.ae  ai_canonical_neural_network.ae  ai_canonical_probabilistic.ae  ai_canonical_tensor_ops.ae  concurrency_example.ae  ffi_example.ae  game_example.ae  loops_example.ae  multi_target_compilation.ae  probabilistic_simple.ae  simple_math.ae  type_system_example.ae
src/: lib.rs
src/build_system/: aether_compiler.rs  config.rs  environment.rs  error_handler.rs  fix_engine.rs  manager.rs  mod.rs  windows.rs  (+2 more)
tests/: aether_compiler_tests.rs  aether_mlir_context_tests.rs  autodiff_tests.rs  build_system_tests.rs  build_workflow_integration_tests.rs  cli_integration_tests.rs  code_quality_benchmarks.rs  compilation_benchmarks.rs  compilation_correctness_tests.rs  comprehensive_testing_framework_test.rs  concurrency_tests.rs  concurrency_unit_tests.rs  error_handling_tests.rs  executable_linking_tests.rs  ffi_tests.rs  ffi_unit_tests.rs  file_compilation_integration_test.rs  file_compilation_integration_tests.rs  file_compilation_performance_tests.rs  file_compilation_testing_unit_tests.rs  game_dev_tests.rs  game_dev_unit_tests.rs  gpu_kernel_tests.rs  integration_test.rs  integration_test_runner.rs  mlir_integration_tests.rs  mlir_llvm_integration_tests.rs  mlir_module_tests.rs  mlir_tests.rs  mod.rs  native_compilation_tests.rs  optimization_property_tests.rs  parser_tests.rs  performance_regression_tests.rs  probabilistic_tests.rs  property_based_tests.rs  property_benchmark_runner.rs  runtime_integration_test.rs  rust_compiler_tests.rs  simple_error_test.rs  (+17 more)
(+98 files in other folders)
